[metadata]
name = async_plus
description = Async-related stuff you miss in standard library
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/async-plus
license = MIT

[options]
packages =
    async_plus
python_requires = >3.7
install_requires =
setup_requires =
    pytest-runner>=5.1
    setuptools_scm>=3.3.3
tests_require =
    pytest>=5.4.3
    pytest-asyncio>=0.14.0
    pytest-cov>=2.10.0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native --cov
filterwarnings =
    error

[coverage:run]
branch = True
source =
    async_plus

[coverage:report]
show_missing = True
