[metadata]
name = async_plus
description = Async-related stuff you miss in standard library
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/async-plus
license = MIT

[options]
packages =
    async_plus
python_requires = >3.7
install_requires =
setup_requires =
    setuptools_scm>=3.3.3

[options.extras_require]
test =
    pytest>=6.2.0
    pytest-asyncio>=0.14.0
    pytest-cov>=2.11.1


[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native
filterwarnings = error

[coverage:run]
branch = True
source =
    async_plus

[coverage:report]
show_missing = True

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True


[tox:tox]
envlist = py37,py38,py39,mypy

[testenv]
extras = test
commands = pytest {posargs:--cov --cov-report=}

[testenv:mypy]
basepython = python3.8
deps = mypy
commands = mypy -p async_plus -p tests
